@@ -4,6 +4,7 @@
 	* Bug fixes:
 		- Fix logrotate issue when log to stdout/stderr(2018-06-05)
 		- Fix coredump on exit(2018-07-18)
+		- Fix startup blocked by BinlogQueue::find_last()(2018-08-08)
 * 1.9.6
 	* New features:
 		- ssdb-cli supports command history(2018-04-24)
